# externals

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.bat  build_win.bat  config.h.in  gitpush.sh  travis.sh
include/: CreateDump.cpp  CreateDump.h  SymEngine.h  TimeLimit.cpp  TimeLimit.h  config.h
include/ButtonST/: BCMenu.cpp
include/EasyMatchBox/: EasyMatchBox.cpp  EasyMatchBox.h
include/EasyUsb/: EasyUsb.cpp  EasyUsb.h  ParseParam.h
include/MFC/: HelperDlg.h
include/bmp/: easyiris.h  readwrite.h  resize.h
include/cache/: eventdatacache.h
include/common/: ConfigBase.h  ConvertSync.h  FileSearch.h  JavaMem.h  MAC.h  ObjectList.h  SignalManager.h  Signal_.h  TaskManager.h  TimeSpan.h  base64.h  externapi.h  message_.h  path.h  qtstl.h  rc4.h  utils.h
include/commonex/: convert_sync.h  signal.h  thread_pool.h  utils.h
include/farfrr/: AnalyseData.h  AnalyseThread.cpp  AnalyseThread.h  ReadThread.cpp  ReadThread.h  farfrr.h  farfrr.xlsx  farfrr_compare.xlsx
include/test/: utils_convert_sync.cpp  utils_eventdatacache.cpp  utils_signal.cpp  utils_test.sln  utils_thread.cpp  utils_thread_pool.cpp
include/test/utils_convert_sync/: utils_convert_sync.cpp  utils_convert_sync.vcxproj
include/test/utils_signal/: utils_signal.sln  utils_signal.vcxproj
include/test/utils_thread/: utils_thread.sln  utils_thread.vcxproj
sqlite-3.6.12/: CppSQLite3.cpp
sqlite-3.6.12/lib/: sqlite3.lib
whscomlib/include/: whscominnerlib.h  whscomlib.h
whscomlib/lib/Win32/: whscomlib.lib
whsusbapi/include/: whsusbapi.h  whsusbinnerapi.h
(+7 files in other folders)
